
Version 0.8.0
* Added option to do the STAR 2 pass mode
* Removed option to run pipeline without IDs
* Speed improvements
* Perform demultiplex after mapping
* No attaching the barcode to reverse reads
* Removing some parameters
* Some improvements in stDataPlotter
* Option to use BAM format
* Removed annotation filtering step
* Removed forward trimming parameters
* Output gene names even with ENSEMBL

Version 0.8.1
* Removed the pair mode keep option
* Removed un-neccessary pair mode and mapped checks
  after alignment
  
Version 0.8.2
* Added stats for annotated reads
* Replaced shelve dict for sqldict
* Fixed some small bugs in the annotation

Version 0.8.3
* Added parameter for strandness in annotation (yes by default)
* Simplified a bit the quality trimming step (do not account for user input trimmed bases)

Version 0.8.4
* Added a normal hash with INT keys to increase speed and reduce memory
* Using the gene_id for annotation again

Version 0.8.5
* Fixed a bug in the computation of saturation curves

Version 0.8.7
* Updated comments, manual and license
* Small improvements

Version 0.8.8
* Removed barcodes from the code

Version 0.8.9
* Improved the error messages and error handling

Version 0.9.0
* Replaced JSON for data frame in the output format
* Replaced python gzip for system call (faster)
* Changed the logic of how the filenames are stored and handled

Version 0.9.1
* Fixed a small bug with the location of discarded files

Version 0.9.2
* Fixed a bug in the parsing of parameters

Version 0.9.3
* Changed the rRNA filter so the BAM output does not need to be sorted

Version 0.9.4
* Fixed a stupid bug in the compute saturation option

Version 0.9.5
* When a R2 is trimmed its correspondant R1 is trimmed as well

Version 0.9.6
* Fixed a bug with the non ambiguous option
* Fix a bug in the saturation computation

Version 0.9.9
* Small bug fixes

Version 1.0.0
* Optimized the UMI template check code
* Optimize how the unique molecules are counted